# segmentanything_darktable

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
src/: darktable.py  main.py  segment.py
