[tool.poetry]
name = "segmentanything-darktable"
version = "0.1.0"
description = ""
authors = ["Jasper Insinger <jasperinsinger+kalmjaspergh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
defusedxml = "^0.7.1"
"sam 2" = { path = "external/segment-anything-2", develop = true }
torch = "^2.5.1"
torchvision = "^0.20.1"
opencv-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# match black
line-length = 120
target-version = "py312"
lint.select = [
    "ALL", # include all the rules, including new ones
]
lint.ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports
    "S311",
    "ERA001",
    "PGH004",
    "G004",
    "EM102",
    "ISC001",
    "PGH003",
    "EM101",
    "S104",

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D203",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "PLR0915",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]